@@ -15,7 +15,6 @@ test_that("subjectProfileLinePlot - basic plot", {
 		data = subset(dataLB, USUBJID == "study-4902-02"),
 		paramNameVar = "LBTEST", 
 		paramValueVar = "LBSTRESN",
-		paramGroupVar = "LBSCAT",
 		paramValueRangeVar = c("LBSTNRLO", "LBSTNRHI"),
 		timeVar = "LBDY",
 		title = "Laboratory test measurements: actual value",
@@ -62,7 +61,6 @@ test_that("subjectProfileLinePlot - yLimFrom - value", {
 		data = subset(dataLB, USUBJID == "study-4902-02"),
 		paramNameVar = "LBTEST", 
 		paramValueVar = "LBSTRESN",
-		paramGroupVar = "LBSCAT",
 		paramValueRangeVar = c("LBSTNRLO", "LBSTNRHI"),
 		timeVar = "LBDY",
 		title = "Laboratory test measurements: actual value",
@@ -77,4 +75,52 @@ test_that("subjectProfileLinePlot - yLimFrom - value", {
 		verbose = TRUE
 	)
 			
+})
+
+test_that("subjectProfileLinePlot - correct order of paramGroupVar", {
+		
+	# create the plot:
+	dataPatient <- subset(dataLB, USUBJID == "study-4902-02")
+	paramGroupVar <- c("LBCAT", "LBSCAT")
+	xVar <- "LBDY"
+	yVar <- "LBSTRESN"
+	paramVar <- "LBTEST"
+	lbLinePlots <- subjectProfileLinePlot(
+		data = dataPatient,
+		paramNameVar = paramVar, 
+		paramValueVar = yVar,
+		paramGroupVar = paramGroupVar,
+		timeVar = xVar,
+		title = "Laboratory test measurements: actual value",
+		labelVars = labelVarsSDTMPelican
+	)
+	
+	# output data from ggplot2
+	dataPlotsList <- lapply(seq_along(lbLinePlots[[1]]), function(i){
+		gg <- lbLinePlots[[1]][[i]]
+		ggBuildData <- ggplot_build(gg)$data
+		dataPlot <- ggBuildData[[which.max(sapply(ggBuildData, nrow))]]
+		dataPlot <- dataPlot[, c("PANEL", "x", "y")]
+		dataPlot$PANEL <- as.numeric(dataPlot$PANEL) + i * 1000
+		dataPlot
+	})
+	dataPlots <- do.call(rbind, dataPlotsList)
+	dataPlotsOrd <- dataPlots[do.call(order, dataPlots), ]
+	rownames(dataPlotsOrd) <- NULL
+	
+	# input data for plot:
+	dataInputPlot <- dataPatient[, c(paramGroupVar, paramVar, xVar, yVar)]
+	idxComplete <- which(!is.na(dataInputPlot[, xVar]) & !is.na(dataInputPlot[, yVar]))
+	dataInputPlot <- dataInputPlot[idxComplete, ]
+	idxOrderParam <- do.call(order, dataInputPlot[, c(paramGroupVar, paramVar)])	
+	paramOrder <- unique(dataInputPlot[idxOrderParam, paramVar])
+	dataInputPlot$PANEL <- match(dataInputPlot[, paramVar], paramOrder)
+	dataInputPlotOrd <- dataInputPlot[do.call(order, dataInputPlot[, c("PANEL", xVar, yVar)]), ]
+	
+	# compare the two
+	expect_equivalent(
+		object = dataPlotsOrd[, c("x", "y")],
+		expected = dataInputPlotOrd[, c(xVar, yVar)]
+	)
+	
 })
